--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -12,19 +12,12 @@ Vagrant.configure("2") do |config|
             "--vram", "256",
             "--ioapic", "on",
             "--monitorcount", "1",
-            "--graphicscontroller", "vmsvga",
-            "--accelerate3d", "on"
+            "--graphicscontroller", "vmsvga"
         ]
 
     end
 
     config.vm.provision "shell", inline: <<-SHELL
-
-        # Создание пользователя
-        sudo useradd -m -s /bin/bash dev
-        echo "dev:dev" | sudo chpasswd
-        sudo usermod -aG sudo dev
-        echo "dev ALL=(ALL) NOPASSWD:ALL" | sudo tee /etc/sudoers.d/dev
 
         sudo apt-get -y update && apt-get -y install \
           curl \
@@ -32,6 +25,9 @@ Vagrant.configure("2") do |config|
           tree \
           htop \
           net-tools
+
+        # Создание пользователя dev:dev
+        sudo /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/awkirin/awk-snippets/HEAD/add-dev-user.sh)"
 
     SHELL
 
