--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -1,6 +1,7 @@
 Vagrant.configure("2") do |config|
 
     config.vm.box = "ubuntu/jammy64"
+    config.vm.hostname = "vagrant-ubuntu"
 
     config.vm.provider "virtualbox" do |vb|
         vb.name = "VUbuntu"
@@ -26,7 +27,7 @@ Vagrant.configure("2") do |config|
           htop \
           net-tools
 
-        # Создание пользователя dev:dev
+        # Создание пользователя login:pass dev:dev
         sudo /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/awkirin/awk-snippets/HEAD/add-dev-user.sh)"
 
     SHELL
