--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -20,10 +20,12 @@ Vagrant.configure("2") do |config|
 
     config.vm.provision "shell", inline: <<-SHELL
 
-        awk_snippets() {
-            local path="$1"
-            sudo /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/awkirin/awk-snippets/HEAD/$path)"
-        }
+        /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/awkirin/awk-snippets/HEAD/init-awk-snippets.sh)"
+
+#         awk_snippets() {
+#             local path="$1"
+#             sudo /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/awkirin/awk-snippets/HEAD/bin/$path)"
+#         }
 
         sudo apt-get -y update
 
