--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -20,7 +20,8 @@ Vagrant.configure("2") do |config|
 
     config.vm.provision "shell", inline: <<-SHELL
 
-        /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/awkirin/awk-snippets/HEAD/bin/init-awk-snippets.sh)"
+        source <(curl -fsSL https://raw.githubusercontent.com/awkirin/awk-snippets/HEAD/bin/init-awk-snippets.sh)
+
 
 #         awk_snippets() {
 #             local path="$1"
