--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -34,13 +34,8 @@ Vagrant.configure("2") do |config|
         # init awk_snippets
         source <(curl -fsSL https://raw.githubusercontent.com/awkirin/awk-snippets/HEAD/bin/init-awk-snippets.sh)
 
-        # config ssh-server
         awk_snippets config-openssh-server.sh
-        sudo /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/awkirin/awk-snippets/HEAD/bin/config-openssh-server.sh)"
-
-        # add admin
-        awk_snippets config-openssh-server.sh
-        sudo USER_NAME="dev" USER_PASS="dev" /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/awkirin/awk-snippets/HEAD/add-admin-user.sh)"
+        awk_snippets add-admin-user.sh
 
     SHELL
 
