--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -1,10 +1,18 @@
+HOSTNAME='dockerhost.local'
+USER='vagrant'
+
 Vagrant.configure("2") do |config|
 
+    config.vm.hostname = HOSTNAME
     config.vm.box = "ubuntu/jammy64"
-    config.vm.hostname = "vubuntu"
+
+#     config.vm.synced_folder "./apps", "/apps",
+#         create: true,
+#         owner: USER,
+#         group: USER
 
     config.vm.provider "virtualbox" do |vb|
-        vb.name = "vubuntu"
+        vb.name = HOSTNAME
         vb.gui = false
         vb.memory = "2048"
         vb.customize [
@@ -18,25 +26,35 @@ Vagrant.configure("2") do |config|
 
     end
 
-    config.vm.provision "shell", inline: <<-SHELL
+    config.vm.provision "shell" do |s|
+#         ssh_pub_key = File.open("#{Dir.home}/.ssh/id_rsa.pub", "rb").read
+#         ssh_prv_key = File.open("#{Dir.home}/.ssh/id_rsa", "rb").read
+        local_username = ENV['USER'].downcase
+        workspace_dir = Dir.pwd
+        workspace_dir.slice! Dir.home
 
-        sudo apt-get -y update
+        s.inline = <<-SHELL
 
-        sudo apt-get -y install \
-          curl \
-          git \
-          tree \
-          htop \
-          zsh \
-          net-tools \
-          openssh-server
+            apt-get -y update
+            apt-get -y install docker-compose
 
-        # init awk_snippets
-        source <(curl -fsSL https://raw.githubusercontent.com/awkirin/awk-snippets/HEAD/bin/init-awk-snippets.sh)
+            # Говорят нужно для оптимизации
+            apt-get -y install virtualbox-guest-x11 virtualbox-guest-utils
+#             systemctl restart virtualbox-guest-utils # выдает ошибку
 
-        awk_snippets config-openssh-server.sh
-        awk_snippets add-admin-user.sh
+#             # SETUP DOCKER WITH SOCKET EXPOSED ON PORT 2375
+#             wget -qO- https://get.docker.com/ | sh
+#             echo '{"hosts": ["tcp://0.0.0.0:2375", "unix:///var/run/docker.sock"]}' > /etc/docker/daemon.json
+#             mkdir -p /etc/systemd/system/docker.service.d
+#             echo "[Service]
+#             ExecStart=
+#             ExecStart=/usr/bin/dockerd
+#             " > /etc/systemd/system/docker.service.d/override.conf
+#             systemctl daemon-reload
+#             systemctl restart docker.service
 
-    SHELL
-
+        SHELL
+    end
 end
+
+
