--- a/.htaccess
+++ b/.htaccess
@@ -2,17 +2,42 @@
 Order Allow,Deny
 Allow from all
 
-# block bad bots
-SetEnvIfNoCase User-Agent "petalbot" bad_bot
+# 1. ПУСТЫЕ USER-AGENT
+SetEnvIf User-Agent "^$" bad_bot
+SetEnvIf User-Agent "^-?$" bad_bot
+
+# 2. ФЕЙКОВЫЕ Chrome (версии 90- и 130+)
+SetEnvIfNoCase User-Agent "chrome/([1-8][0-9]\.|90\.|1[3-9][0-9]\.|[2-9][0-9][0-9]\.)" bad_bot
+
+# 3. УРЕЗАННЫЕ USER-AGENT
+SetEnvIfNoCase User-Agent "^mozilla/5\.0.*applewebkit/537\.36$" bad_bot
+
+# 4. ВРЕДОНОСНЫЕ/АГРЕССИВНЫЕ БОТЫ
 SetEnvIfNoCase User-Agent "trendictionbot" bad_bot
+SetEnvIfNoCase User-Agent "geedo" bad_bot
+SetEnvIfNoCase User-Agent "seranking" bad_bot
+SetEnvIfNoCase User-Agent "timpibot" bad_bot
+SetEnvIfNoCase User-Agent "semrushbot" bad_bot
 SetEnvIfNoCase User-Agent "keys-so-bot" bad_bot
 SetEnvIfNoCase User-Agent "wpbot" bad_bot
-SetEnvIfNoCase User-Agent "semrushbot" bad_bot
+SetEnvIfNoCase User-Agent "dataforseo" bad_bot
+
+# 5. ЛЕГИТИМНЫЕ БОТЫ
+SetEnvIfNoCase User-Agent "bytespider" bad_bot
+SetEnvIfNoCase User-Agent "petalbot" bad_bot
+SetEnvIfNoCase User-Agent "baidu" bad_bot
+
+#SetEnvIfNoCase User-Agent "meta-externalagent" bad_bot
 #SetEnvIfNoCase User-Agent "oai-searchbot" bad_bot
 #SetEnvIfNoCase User-Agent "gptbot" bad_bot
 #SetEnvIfNoCase User-Agent "amazonbot" bad_bot
+#SetEnvIfNoCase User-Agent "twitterbot" bad_bot
+#SetEnvIfNoCase User-Agent "telegrambot" bad_bot
+#SetEnvIfNoCase User-Agent "bingbot" bad_bot
+
 Deny from env=bad_bot
 
 # wp scan
 Deny from 20.62.114.0
+
 # /awk blocks
