--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,5 @@
 # blocks
+Options -Indexes
 ServerSignature Off
 
 Header always unset Server
@@ -13,6 +14,35 @@ Header always set X-Frame-Options "SAMEORIGIN"
 Header always set Content-Security-Policy "frame-ancestors 'self'"
 Header always set X-XSS-Protection "1; mode=block"
 Header always set Referrer-Policy "strict-origin-when-cross-origin"
+
+<IfModule mod_expires.c>
+    ExpiresActive On
+    ExpiresByType image/jpg "access plus 1 year"
+    ExpiresByType image/jpeg "access plus 1 year"
+    ExpiresByType image/gif "access plus 1 year"
+    ExpiresByType image/png "access plus 1 year"
+    ExpiresByType image/svg+xml "access plus 1 year"
+    ExpiresByType image/webp "access plus 1 year"
+    ExpiresByType text/css "access plus 1 month"
+    ExpiresByType text/javascript "access plus 1 month"
+    ExpiresByType application/javascript "access plus 1 month"
+    ExpiresByType application/x-font-ttf "access plus 1 year"
+    ExpiresByType application/x-font-woff "access plus 1 year"
+    ExpiresByType application/font-woff "access plus 1 year"
+    ExpiresByType application/font-woff2 "access plus 1 year"
+    ExpiresByType font/ttf "access plus 1 year"
+    ExpiresByType font/woff "access plus 1 year"
+    ExpiresByType font/woff2 "access plus 1 year"
+</IfModule>
+
+<IfModule mod_headers.c>
+    <FilesMatch "\.(ico|pdf|flv|jpg|jpeg|png|gif|webp|svg|js|css|swf)$">
+        Header set Cache-Control "public, max-age=31536000, no-transform"
+    </FilesMatch>
+    <FilesMatch "\.(html|htm)$">
+        Header set Cache-Control "public, max-age=7200, must-revalidate"
+    </FilesMatch>
+</IfModule>
 
 <FilesMatch "\.(htaccess|htpasswd|ini|phps|fla|psd|log|sh|lock|env|gitignore|md|sql|tpl|twig|blade\.php)$">
 Order Allow,Deny
